add tests for bulk upload help main page component

--- a/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
@@ -4,11 +4,11 @@
     <div class="govuk-!-margin-bottom-7">
       <h2 class="govuk-heading-m govuk-!-padding-bottom-1">Top tips and 'how to' guides</h2>
       <p>Quick and easy help on how to bulk uploads.</p>
-      <a class="govuk-body" [routerLink]="['../', 'start']">Step by step bulk upload guide</a>
+      <a class="govuk-body" [routerLink]="['../', 'step-by-step-guide']">Step by step bulk upload guide</a>
     </div>
     <div class="govuk-!-margin-bottom-7">
       <h2 class="govuk-heading-m govuk-!-padding-bottom-1">Troubleshooting</h2>
-      <a class="govuk-body" [routerLink]="['./']"
+      <a class="govuk-body" [routerLink]="['./', 'troubleshooting']"
         >Get handy troubleshooting hints to help you fix common problems and errors</a
       >
     </div>
@@ -21,7 +21,10 @@
         (available Monday to Friday, 9am to 5pm, not including public holidays).
       </p>
       <h3 class="govuk-heading-s">Email</h3>
-      <p>Send an email to ascwds-support@skillsforcare.org.uk</p>
+      <p>
+        Send an email to
+        <a href="mailto:ascwds-support@skillsforcare.org.uk">ascwds-support@skillsforcare.org.uk</a>
+      </p>
     </div>
   </div>
   <div class="govuk-grid-column-one-third">
