Added side bar to about bulk upload and amended bulk get help side bar routerlink url

--- a/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-related-content/bulk-upload-related-content.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-related-content/bulk-upload-related-content.component.html
@@ -1,7 +1,7 @@
 <h2 class="govuk-heading-s">Related content</h2>
 <ul class="govuk-list">
   <li *ngIf="showGetHelpWithBulkUploads">
-    <a [routerLink]="['/bulk-upload', '/get-help']">Get help with bulk uploads</a>
+    <a [routerLink]="['/bulk-upload', 'get-help']">Get help with bulk uploads</a>
   </li>
   <li *ngIf="showViewReferences">
     <a [routerLink]="['/bulk-upload', 'workplace-references']">View references</a>
