--- a/src/app/features/bulk-upload/about-bulk-upload/about-bulk-upload.component.html
+++ b/src/app/features/bulk-upload/about-bulk-upload/about-bulk-upload.component.html
@@ -43,4 +43,15 @@
       Return to bulk upload
     </a>
   </div>
+  <div class="govuk-grid-column-one-third">
+    <div class="govuk-!-margin-top-6">
+      <app-bulk-upload-related-content
+        [showViewLastBulkUpload]="false"
+        [showViewReferences]="false"
+        [showAboutBulkUpload]="false"
+      >
+      </app-bulk-upload-related-content>
+    </div>
+    <app-codes-and-guidance></app-codes-and-guidance>
+  </div>
 </div>
