--- a/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-related-content/bulk-upload-related-content.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-related-content/bulk-upload-related-content.component.html
@@ -8,6 +8,11 @@
   </li>
   <li *ngIf="showDataChanges">
     <a [routerLink]="['/bulk-upload', '/']">Data changes</a>
+    <img
+      src="/assets/images/flag-orange.svg"
+      alt=""
+      class="govuk-util__vertical-align-top govuk-!-margin-left-1 govuk-!-margin-bottom-3"
+    />
   </li>
   <li *ngIf="showAboutBulkUpload">
     <a [routerLink]="['/bulk-upload', 'about-bulk-upload']">About bulk upload</a>
