Remove the data change and BU help from bulkupload page

--- a/src/app/features/bulk-upload/bulk-upload-page/bulk-upload-page.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-page/bulk-upload-page.component.html
@@ -27,10 +27,7 @@
     </div>
   </div>
   <div class="govuk-grid-column-one-third">
-    <app-bulk-upload-related-content
-      [showGetHelpWithBulkUploads]="false"
-      [showDataChanges]="false"
-    ></app-bulk-upload-related-content>
+    <app-bulk-upload-related-content></app-bulk-upload-related-content>
     <app-bulk-upload-download-current-data></app-bulk-upload-download-current-data>
     <app-codes-and-guidance></app-codes-and-guidance>
   </div>
