--- a/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
@@ -1,6 +1,9 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">Get help with bulk uploads</h1>
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+      <span class="govuk-caption-l">Bulk upload</span>
+      <h1 class="govuk-fieldset__heading">Get help with bulk uploads</h1>
+    </legend>
     <div class="govuk-!-margin-bottom-7">
       <h2 class="govuk-heading-m govuk-!-padding-bottom-1">Top tips and 'how to' guides</h2>
       <p>Quick and easy help on how to bulk uploads.</p>
