Added CMS Page resolver and path

--- a/src/app/features/bulk-upload/bulk-upload-troubleshooting-page/bulk-upload-troubleshooting-page.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-troubleshooting-page/bulk-upload-troubleshooting-page.component.html
@@ -2,17 +2,7 @@
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Troubleshooting</h1>
     <p>Our handy hints could help you fix common problems and errors that some bulk uploads have reported</p>
-    <!-- Below links will all be from the CMS current below code is a placeholder -->
-    <div class="govuk-!-margin-top-7 govuk-!-padding-bottom-3">
-      <a class="govuk-body" [routerLink]="['./', '']">My data hasn't changed</a>
-    </div>
-    <div class="govuk-!-padding-bottom-3">
-      <a class="govuk-body" [routerLink]="['./', '']">File not recognised</a>
-    </div>
-    <div class="govuk-!-padding-bottom-3">
-      <a class="govuk-body" [routerLink]="['./', '']">ALLJOBROLES and VACANCIES</a>
-    </div>
-    <!-- ----------------------------------------------------------------------- -->
+    <app-page></app-page>
   </div>
   <div class="govuk-grid-column-one-third">
     <div class="govuk-!-margin-top-6">
