--- a/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="govuk-!-margin-bottom-7">
       <h2 class="govuk-heading-m govuk-!-padding-bottom-1">Troubleshooting</h2>
-      <a class="govuk-body" [routerLink]="['./', 'troubleshooting']"
+      <a class="govuk-body" [routerLink]="['../', 'troubleshooting']"
         >Get handy troubleshooting hints to help you fix common problems and errors</a
       >
     </div>
