--- a/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
@@ -4,11 +4,18 @@
     <div class="govuk-!-margin-bottom-7">
       <h2 class="govuk-heading-m govuk-!-padding-bottom-1">Top tips and 'how to' guides</h2>
       <p>Quick and easy help on how to bulk uploads.</p>
-      <a class="govuk-body" [routerLink]="['../', 'step-by-step-guide']">Step by step bulk upload guide</a>
+      <ul class="govuk-list">
+        <li class="govuk-!-margin-bottom-3">
+          <a class="govuk-body" [routerLink]="['/bulk-upload', 'step-by-step-guide']">Step by step bulk upload guide</a>
+        </li>
+        <li class="govuk-!-margin-bottom-3" *ngFor="let topTip of topTipsList">
+          <a [routerLink]="['/bulk-upload', 'get-help', topTip.slug]">{{ topTip.title }}</a>
+        </li>
+      </ul>
     </div>
     <div class="govuk-!-margin-bottom-7">
       <h2 class="govuk-heading-m govuk-!-padding-bottom-1">Troubleshooting</h2>
-      <a class="govuk-body" [routerLink]="['./', 'troubleshooting']"
+      <a class="govuk-body" [routerLink]="['/bulk-upload', 'get-help', 'troubleshooting']"
         >Get handy troubleshooting hints to help you fix common problems and errors</a
       >
     </div>
