--- a/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-related-content/bulk-upload-related-content.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-related-content/bulk-upload-related-content.component.html
@@ -7,7 +7,7 @@
     <a [routerLink]="['/bulk-upload', 'workplace-references']">View references</a>
   </li>
   <li *ngIf="showDataChanges">
-    <a [routerLink]="['/bulk-upload', '/']">Data changes</a>
+    <a [routerLink]="['/bulk-upload', 'data-change']">Data changes</a>
     <span *ngIf="showFlagBUChanges">
       <img
         src="/assets/images/flag-orange.svg"
