add back link functionality to the flowchart

--- a/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
@@ -14,7 +14,9 @@
           >
         </li>
         <li class="govuk-!-margin-bottom-3" *ngFor="let topTip of topTipsList">
-          <a [routerLink]="['/bulk-upload', 'get-help', topTip.slug]">{{ topTip.title }}</a>
+          <a [routerLink]="['/bulk-upload', 'get-help', topTip.slug]" (click)="setReturnUrl(topTip.slug)">{{
+            topTip.title
+          }}</a>
         </li>
       </ul>
     </div>
