--- a/src/app/features/bulk-upload/help-area/bulk-upload-top-tip-page/bulk-upload-top-tip-page.component.html
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-top-tip-page/bulk-upload-top-tip-page.component.html
@@ -15,7 +15,9 @@
           *ngFor="let topTipItem of topTipsList"
           [ngClass]="{ 'govuk-!-font-weight-bold': topTipItem.slug === topTip.slug }"
         >
-          <a [routerLink]="['/bulk-upload', 'get-help', topTipItem.slug]">{{ topTipItem.link_title }}</a>
+          <a [routerLink]="['/bulk-upload', 'get-help', topTipItem.slug]" (click)="setReturnUrl(topTipItem.slug)">{{
+            topTipItem.link_title
+          }}</a>
         </li>
       </ul>
     </div>
