add tab index to images on flowchart, add tests for setting back link url

--- a/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
@@ -9,7 +9,10 @@
       <p>Quick and easy help on how to bulk uploads.</p>
       <ul class="govuk-list">
         <li class="govuk-!-margin-bottom-3">
-          <a class="govuk-body" [routerLink]="['/bulk-upload', 'get-help', 'step-by-step-guide']"
+          <a
+            class="govuk-body"
+            [routerLink]="['/bulk-upload', 'get-help', 'step-by-step-guide']"
+            (click)="setReturnUrl()"
             >Step by step bulk upload guide</a
           >
         </li>
