--- a/src/app/features/bulk-upload/help-area/bulk-upload-flowchart/bulk-upload-flowchart.component.html
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-flowchart/bulk-upload-flowchart.component.html
@@ -1,9 +1,13 @@
 <div class="govuk-grid-column-full">
   <div class="govuk-grid-row">
     <h1 class="govuk-heading-l govuk-!-margin-bottom-4" data-testid="heading">Step by step bulk upload guide</h1>
-    <a role="button" class="govuk-list govuk-list--inline govuk-util__float-right" href="#" (click)="printPage($event)"
-      >Print this page</a
-    >
+    <ul class="govuk-list govuk-list--download govuk-util__float-right">
+      <li>
+        <a href="/public/download/Step_By_Step_Bulk_Upload_Guide.pdf" target="_blank"
+          >Download bulk upload guide<span class="govuk-visually-hidden">, (opens in a new window)</span></a
+        >
+      </li>
+    </ul>
   </div>
   <div class="govuk-grid-row govuk-!-margin-top-4">
     <div class="asc-flowchart-image-container">
@@ -12,6 +16,7 @@
           alt="Is this your first time you've done a bulk upload?"
           src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-1.png"
           class="asc-flowchart-image"
+          tabindex="0"
         />
       </div>
       <div class="asc-flowchart-row asc-flowchart-row__flex">
@@ -20,16 +25,19 @@
             alt="If yes, select 'bulk upload your data' and then read about who should do bulk uploads and what you need to know before doing one"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-2.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
           <img
             alt="Then add unique workplace and staff references as needed"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-3.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
           <img
             alt="Then download and read 'codes and guidance' documents"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-4.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
         </div>
         <div class="asc-flowchart-column">
@@ -37,11 +45,13 @@
             alt="If no, select 'bulk upload your data', do you have any missing references?"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-5.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
           <img
-            alt="If yes, add missing references"
+            alt="If yes, add missing references, if no go to next step"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-6.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
         </div>
       </div>
@@ -50,6 +60,7 @@
           alt="Then download the current workplace and staff data files, the training data file is optional"
           src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-7.png"
           class="asc-flowchart-image"
+          tabindex="0"
         />
       </div>
       <div class="asc-flowchart-row">
@@ -57,6 +68,7 @@
           alt="Then update the data files and save them as CSV files"
           src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-8.png"
           class="asc-flowchart-image"
+          tabindex="0"
         />
       </div>
       <div class="asc-flowchart-row">
@@ -64,6 +76,7 @@
           alt="Then select the data files that you've just updated"
           src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-9.png"
           class="asc-flowchart-image"
+          tabindex="0"
         />
       </div>
       <div class="asc-flowchart-row">
@@ -71,6 +84,7 @@
           alt="Then validate the data files that you've just selected"
           src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-10.png"
           class="asc-flowchart-image"
+          tabindex="0"
         />
       </div>
       <div class="asc-flowchart-row">
@@ -78,6 +92,7 @@
           alt="Are there any errors?"
           src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-11.png"
           class="asc-flowchart-image"
+          tabindex="0"
         />
       </div>
       <div class="asc-flowchart-row asc-flowchart-row__flex">
@@ -86,26 +101,31 @@
             alt="If yes, view the error report"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-12.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
           <img
             alt="Then fix the errors (you do not need to fix warnings, but it does improve the data)"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-13.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
           <img
             alt="Then select the data files that you've just fixed"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-14.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
           <img
             alt="Then validate the data files that you've just selected"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-15.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
           <img
             alt="Are there any errors? If yes - go back to view the error report and repeat the process. If no - complete the upload"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-16.png"
             class="asc-flowchart-image asc-flowchart-image__margin-top"
+            tabindex="0"
           />
         </div>
         <div class="asc-flowchart-column">
@@ -113,11 +133,13 @@
             alt="If there are no errors - complete the upload"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-17.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
           <img
             alt="arrows"
             src="/assets/images/bulk-upload-flowchart/bulk-upload-flowchart-18.png"
             class="asc-flowchart-image"
+            tabindex="0"
           />
         </div>
       </div>
