Remove white space between related content links and data changes  link from data changes page

--- a/src/app/features/bulk-upload/data-changes/data-change.component.html
+++ b/src/app/features/bulk-upload/data-changes/data-change.component.html
@@ -14,7 +14,8 @@
       <app-bulk-upload-related-content
         [showViewLastBulkUpload]="false"
         [showViewReferences]="false"
-        [showGetHelpWithBulkUploads]="false"
+        [showGetHelpWithBulkUploads]="true"
+        [showDataChangesBulkUpload]="false"
       >
       </app-bulk-upload-related-content>
     </div>
