--- a/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-related-content/bulk-upload-related-content.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-related-content/bulk-upload-related-content.component.html
@@ -1,22 +1,18 @@
 <h2 class="govuk-heading-s">Related content</h2>
 <ul class="govuk-list">
-  <li *ngIf="showGetHelpWithBulkUploads" class="govuk-!-margin-bottom-3">
+  <li *ngIf="showGetHelpWithBulkUploads">
     <a [routerLink]="['/bulk-upload', 'get-help']">Get help with bulk uploads</a>
   </li>
-  <li *ngIf="showViewReferences" class="govuk-!-margin-bottom-3">
+  <li *ngIf="showViewReferences">
     <a [routerLink]="['/bulk-upload', 'workplace-references']">View references</a>
   </li>
-  <li *ngIf="showDataChanges">
+  <li *ngIf="showDataChanges && showDataChangesBulkUpload">
     <a [routerLink]="['/bulk-upload', 'data-change']">Data changes</a>
     <span *ngIf="showFlagBUChanges" data-testid="showFlag">
-      <img
-        src="/assets/images/flag-orange.svg"
-        alt=""
-        class="govuk-util__vertical-align-top govuk-!-margin-left-1 govuk-!-margin-bottom-3"
-      />
+      <img src="/assets/images/flag-orange.svg" alt="" class="govuk-util__vertical-align-top govuk-!-margin-left-1" />
     </span>
   </li>
-  <li *ngIf="showAboutBulkUpload" class="govuk-!-margin-bottom-3">
+  <li *ngIf="showAboutBulkUpload">
     <a [routerLink]="['/bulk-upload', 'about-bulk-upload']">About bulk upload</a>
   </li>
   <li *ngIf="this.authService.isAdmin && showViewLastBulkUpload">
