--- a/src/app/features/bulk-upload/data-changes/data-change.component.html
+++ b/src/app/features/bulk-upload/data-changes/data-change.component.html
@@ -14,7 +14,7 @@
       <app-bulk-upload-related-content
         [showViewLastBulkUpload]="false"
         [showViewReferences]="false"
-        [showDataChangesBulkUpload]="false"
+        [showDataChanges]="false"
       >
       </app-bulk-upload-related-content>
     </div>
