fix typo on bulk upload help main page

--- a/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-help-main-page.component.html
@@ -6,7 +6,7 @@
     </legend>
     <div class="govuk-!-margin-bottom-7">
       <h2 class="govuk-heading-m govuk-!-padding-bottom-1">Top tips and 'how to' guides</h2>
-      <p>Quick and easy help on how to bulk uploads.</p>
+      <p>Quick and easy help on how to do bulk uploads.</p>
       <ul class="govuk-list">
         <li class="govuk-!-margin-bottom-3">
           <a
