--- a/src/app/features/bulk-upload/bulk-upload-troubleshooting-page/bulk-upload-troubleshooting-page.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-troubleshooting-page/bulk-upload-troubleshooting-page.component.html
@@ -1,7 +1,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Troubleshooting</h1>
-    <p>Our handy hints could help you fix common problems and errors that some bulk uploads have reported</p>
+    <p>Our handy hints could help you fix common problems and errors that some bulk uploaders have reported.</p>
     <div class="govuk-!-margin-top-7">
       <div class="asc-cms-content" *ngFor="let bulkUploadTroubleShootingPage of bulkUploadTroubleShootingPages">
         <h2 class="govuk-heading-m">{{ bulkUploadTroubleShootingPage.title }}</h2>
