Add a fix for Long Term Absent tag

--- a/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
+++ b/src/app/features/workers/new-training-qualifications-record/new-training-and-qualifications-record.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="worker">
   <div class="govuk-grid-row govuk-!-margin-bottom-0">
-    <div class="govuk-grid-column-one-thirds">
+    <div class="govuk-grid-column">
       <div class="govuk-list--inline govuk-list govuk__flex">
         <span class="govuk-caption-xl govuk-!-margin-right-3" data-testid="workerNameAndRole">
           {{ worker.nameOrId }}: {{ worker.mainJob?.other ? worker.mainJob.other : worker.mainJob.title }}
