--- a/src/app/features/workers/staff-record/staff-record.component.html
+++ b/src/app/features/workers/staff-record/staff-record.component.html
@@ -30,7 +30,7 @@
         class="govuk-button govuk-button--link govuk-!-padding-left-0"
         role="button"
         draggable="false"
-        [routerLink]="['/workplace', workplace.uid, 'training-and-qualifications-record', worker.uid, 'new-training']"
+        [routerLink]="['/workplace', workplace.uid, 'training-and-qualifications-record', worker.uid, 'training']"
       >
         Training and qualifications
       </a>
