techDebt(refactorPermissions): Flip how canViewNinoDob is checked in personal-details to match updated permissions

--- a/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
+++ b/src/app/shared/components/staff-record-summary/personal-details/personal-details.component.html
@@ -25,7 +25,7 @@
         <div class="govuk-!-display-inline-block govuk-!-width-one-third">
           {{ ninoHidden ? '*********' : worker.nationalInsuranceNumber }}
         </div>
-        <ng-container *ngIf="!canViewNinoDob">
+        <ng-container *ngIf="canViewNinoDob">
           <div class="govuk-!-display-inline-block govuk-!-width-two-thirds">
             <a class="govuk-link" href="#" (click)="toggleNinoHide($event)">
               {{ ninoHidden ? 'Show' : 'Hide' }}
@@ -57,7 +57,7 @@
           <ng-container *ngIf="!worker.dateOfBirth; else hasDob">-</ng-container>
           <ng-template #hasDob>{{ dobHidden ? '*********' : dob }}</ng-template>
         </div>
-        <ng-container *ngIf="!canViewNinoDob">
+        <ng-container *ngIf="canViewNinoDob">
           <div class="govuk-!-display-inline-block govuk-!-width-two-thirds">
             <a *ngIf="worker.dateOfBirth" class="govuk-link" href="#" (click)="toggleDobHide($event)"
               >{{ dobHidden ? 'Show' : 'Hide' }}
