change download link text, change text in first no box

--- a/src/app/features/bulk-upload/help-area/bulk-upload-flowchart/bulk-upload-flowchart.component.html
+++ b/src/app/features/bulk-upload/help-area/bulk-upload-flowchart/bulk-upload-flowchart.component.html
@@ -4,7 +4,7 @@
     <ul class="govuk-list govuk-list--download govuk-util__float-right">
       <li>
         <a href="/public/download/Step_By_Step_Bulk_Upload_Guide.pdf" target="_blank"
-          >Download bulk upload guide<span class="govuk-visually-hidden">, (opens in a new window)</span></a
+          >Download step by step guide<span class="govuk-visually-hidden">, (opens in a new window)</span></a
         >
       </li>
     </ul>
