create new BulkUploadFileType and create test file for component

--- a/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-download-current-data/bulk-upload-download-current-data.component.html
+++ b/src/app/features/bulk-upload/bulk-upload-sidebar/bulk-upload-download-current-data/bulk-upload-download-current-data.component.html
@@ -11,10 +11,13 @@
   <li>
     <a
       href="/bulk-upload/download/{{ now | date: 'yyyy-MM-dd' }}-sfc-bulk-upload-staff.csv"
-      (click)="downloadFile($event, BulkUploadFileType.Worker)"
+      (click)="downloadFile($event, sanitise ? BulkUploadFileType.WorkerSanitise : BulkUploadFileType.Worker)"
     >
       Staff
     </a>
+    <!-- <button class="govuk-button govuk-button--secondary" type="button" (click)="toggleFields()">
+      View NI Number and Date of Birth
+    </button> -->
   </li>
   <li>
     <a
