--- a/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
+++ b/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
@@ -5,12 +5,16 @@
         <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
           <h1 class="govuk-fieldset__heading">How many members of staff does your workplace have?</h1>
         </legend>
-
         <p>
           The number should include all staff (care-providing and none care-providing, those on permanent or temporary
           contracts, pool, bank and agency workers).
         </p>
-
+        <app-details [title]="'Not sure how many members of staff your workplace has?'">
+          <p>
+            You can enter an estimate to save time, but remember to update this number in ASC-WDS once your account has
+            been validated by Skills for Care.
+          </p>
+        </app-details>
         <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && (form.invalid || serverError)">
           <label class="govuk-label" for="Numberofstaff"> Number of staff</label>
           <input
