--- a/src/app/features/first-login-wizard/first-login-wizard.component.html
+++ b/src/app/features/first-login-wizard/first-login-wizard.component.html
@@ -20,17 +20,15 @@
         <ng-template #videoBlock>
           <div class="video_wrapper">
             <iframe
-              src="https://player.vimeo.com/video/656928746?h=4de18d3254&color=005eb8&title=0&byline=0&portrait=0"
-              height="auto"
+              class="video"
+              [src]="safeVideoUrl"
               frameborder="0"
               allow="fullscreen; picture-in-picture"
               allowfullscreen
+              loading="eager"
+              alt="{{ wizards[currentIndex].title }}"
             ></iframe>
           </div>
-          <!-- <video controls>
-            TODO: This needs to be [innerHTML]="wizards[currentIndex].video or investigate into how the assets work for images so i am not pulling html"
-            <source src="{{ wizards[currentIndex].video }}" />
-          </video> -->
         </ng-template>
         <ng-template #imageBlock>
           <img
