--- a/src/app/features/first-login-wizard/first-login-wizard.component.scss
+++ b/src/app/features/first-login-wizard/first-login-wizard.component.scss
@@ -20,8 +20,15 @@
 }
 
 .video_wrapper {
-  max-width: 100%;
-  height: calc(100% / (16 / 9));
-  width: auto;
-  //padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+  border: solid 1px black;
+}
+.video_wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
