Changed back to admin link to go to new admin pages

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -38,7 +38,7 @@
       <ul class="govuk-header__navigation" id="navigation2" aria-label="Top Level Navigation">
         <ng-container *ngIf="isAdminUser() && isLoggedIn() && !isOnAdminScreen()">
           <li class="govuk-header__navigation-item">
-            <a [routerLink]="['/search-users']" class="govuk-link">Back to admin</a>
+            <a [routerLink]="['/sfcadmin']" class="govuk-link">Back to admin</a>
           </li>
         </ng-container>
       </ul>
