--- a/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
+++ b/src/app/shared/directives/create-workplace/add-total-staff/add-total-staff.component.html
@@ -1,3 +1,4 @@
+<app-error-summary *ngIf="submitted && form.invalid" [formErrorsMap]="formErrorsMap" [form]="form"> </app-error-summary>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form" id="server-error">
@@ -15,13 +16,17 @@
             been validated by Skills for Care.
           </p>
         </app-details>
+        <span *ngIf="submitted && form.get('totalStaff').invalid" id="totalStaff-error" class="govuk-error-message">
+          <span class="govuk-visually-hidden">Error:</span> {{ getErrorMessage('totalStaff') }}
+        </span>
+
         <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && (form.invalid || serverError)">
-          <label class="govuk-label" for="Numberofstaff"> Number of staff</label>
+          <label class="govuk-label" for="totalStaff"> Number of staff</label>
           <input
             class="govuk-input govuk-input--width-4"
-            [formControlName]="'numberofstaff'"
-            id="numberofstaffID"
-            name="numberofstaffName"
+            formControlName="totalStaff"
+            id="totalStaff"
+            name="totalStaff"
             [class.govuk-input--error]="submitted && (form.invalid || serverError)"
             type="text"
           />
