Added redirect to sfcadmin on login for admins

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -49,7 +49,7 @@
     </div>
   </fieldset>
 
-  <button type="submit" class="govuk-button">Sign in</button>
+  <button type="submit" class="govuk-button" data-testid="signinButton">Sign in</button>
 </form>
 
 <ul class="govuk-list">
