Created Url transform pipe, Added getbyAtt tests, refactored where neccesary

--- a/src/app/features/first-login-wizard/first-login-wizard.component.html
+++ b/src/app/features/first-login-wizard/first-login-wizard.component.html
@@ -21,7 +21,7 @@
           <div class="video_wrapper">
             <iframe
               class="video"
-              [src]="safeVideoUrl"
+              [src]="rawVideoUrl | sanitizeVideoUrl"
               frameborder="0"
               allow="fullscreen; picture-in-picture"
               allowfullscreen
